Fix z-index issues

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,6 +13,7 @@
   margin-right: auto;
   text-align: justify;
   margin-bottom: 150px;
+  z-index: 10;
 
   em {
     background-color: rgba(51, 179, 241, 0.2);
