--- a/src/app/world-map/world-map.component.scss
+++ b/src/app/world-map/world-map.component.scss
@@ -61,7 +61,7 @@
   -ms-perspective-origin: 50% 50%;
   -o-perspective-origin: 50% 50%;
   perspective-origin: 50% 50%;
-  z-index: -1;
+  z-index: 1;
 }
 
 .annotation {
